cluster/apps/default/ingresses/base/syncthing/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name syncthing
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sync.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 8384
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
